[package]
name = "Dungeon Crawl Decipher"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = "0.14"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"