[package]
name = "dungeon-crawl-decipher"
version = "0.0.1"
authors = ["Wonjae Choi <wonjae@snu.ac.kr>"]
edition = "2021"
repository = "https://github.com/0xwonj/dungeon-crawl-decipher"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"